--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,5 @@ services:
     build: .
     ports:
       - target: 8080
-        # change as needed (eg reverse proxy)
+        # change as needed (eg reverse proxy) in .env
         published: ${EXTERNAL_PORT:-8080}
