--- a/src/main/resources/hapi.properties
+++ b/src/main/resources/hapi.properties
@@ -30,14 +30,14 @@ logger.name=fhirtest.access
 logger.format=Path[${servletPath}] Source[${requestHeader.x-forwarded-for}] Operation[${operationType} ${operationName} ${idOrResourceName}] UA[${requestHeader.user-agent}] Params[${requestParameters}] ResponseEncoding[${responseEncodingNoDefault}]
 logger.error_format=ERROR - ${requestVerb} ${requestUrl}
 logger.log_exceptions=true
-datasource.driver=org.apache.derby.jdbc.EmbeddedDriver
-datasource.url=jdbc:derby:directory:target/jpaserver_derby_files;create=true
-datasource.username=
-datasource.password=
+datasource.driver=org.postgresql.Driver
+datasource.url=jdbc:postgresql://db:5432/hapifhir
+datasource.username=hapifhir
+datasource.password=hapifhir
 server.name=Local Tester
 server.id=home
 test.port=
-hibernate.dialect=ca.uhn.fhir.jpa.util.DerbyTenSevenHapiFhirDialect
+hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 hibernate.search.model_mapping=ca.uhn.fhir.jpa.search.LuceneSearchMappingFactory
 hibernate.format_sql=false
 hibernate.show_sql=false
