--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,20 @@ services:
       - target: 8080
         # change as needed (eg reverse proxy) in .env
         published: ${EXTERNAL_PORT:-8080}
+    depends_on:
+     - db
+
+  db:
+    image: postgres:${POSTGRES_VERSION:-11}
+    ports:
+      - target: 5432
+    environment:
+      POSTGRES_DB: hapifhir
+      POSTGRES_USER: hapifhir
+      POSTGRES_PASSWORD: hapifhir
+    volumes:
+      - source: postgres-data
+        target: /var/lib/postgresql/data
+        type: volume
+volumes:
+    postgres-data: {}
